--- a/shopcartanimation/src/main/res/layout/activity_alpha_rotate.xml
+++ b/shopcartanimation/src/main/res/layout/activity_alpha_rotate.xml
@@ -9,8 +9,9 @@
         android:id="@+id/iv_rotate_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_free_pressed"
+        android:src="@drawable/ic_rotate_red"
         android:rotation="30"
+        android:alpha="0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +22,7 @@
         android:id="@+id/iv_rotate_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_entanglement_pressed"
+        android:src="@drawable/ic_rotate_black"
         android:rotation="330"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
