--- a/TestSample/src/main/res/layout/activity_main.xml
+++ b/TestSample/src/main/res/layout/activity_main.xml
@@ -8,18 +8,19 @@
     tools:context=".MainActivity"
     >
 
+
     <ImageView
         android:id="@+id/iv_banner"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
+        android:src="@mipmap/banner"
         app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/banner"
-        />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_start"
