--- a/TestSample/src/main/res/layout/activity_alpha_rotate.xml
+++ b/TestSample/src/main/res/layout/activity_alpha_rotate.xml
@@ -31,4 +31,18 @@
         />
 
 
+    <Button
+        android:id="@+id/tv_button_1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="暂停"
+        android:textSize="14dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"
+        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintTop_toBottomOf="@id/iv_rotate_first"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
