--- a/TestSample/src/main/res/layout/item_label_checked_list.xml
+++ b/TestSample/src/main/res/layout/item_label_checked_list.xml
@@ -15,14 +15,19 @@
         android:layout_marginLeft="12dp"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:nestedScrollingEnabled="false"
-        />
+<!--    <com.translation.sample.widget.NestedScrollableHost-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            />
+<!--    </com.translation.sample.widget.NestedScrollableHost>-->
+
 
 </LinearLayout>
