--- a/TestSample/src/main/res/layout/item_label_children_checked.xml
+++ b/TestSample/src/main/res/layout/item_label_children_checked.xml
@@ -6,8 +6,8 @@
 
     <TextView
         android:id="@+id/tv_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:textSize="14dp"
         android:textColor="@color/black"
         android:paddingLeft="11dp"
