--- a/TestSample/src/main/res/values/attr.xml
+++ b/TestSample/src/main/res/values/attr.xml
@@ -29,5 +29,42 @@
         <attr name="endText" format="string"/>
     </declare-styleable>
 
+    <declare-styleable name="BounceBackViewPager">
+        <!--
+        determines the maximum amount of translation along the z-axis during the overscroll.
+        Default is 150.
+        -->
+        <attr name="overscroll_translation" format="dimension" />
+
+        <!-- Duration of animation when user releases the over scroll. Default is 400 ms. -->
+        <attr name="overscroll_animation_duration" format="integer" />
+    </declare-styleable>
+
+    <declare-styleable name="SlidingLayout">
+        <attr name="background_view" format="reference"/>
+        <attr name="sliding_mode" format="enum">
+            <enum name="both" value="0"/>
+            <enum name="top" value="1"/>
+            <enum name="bottom" value="2"/>
+        </attr>
+        <attr name="sliding_pointer_mode" format="enum">
+            <enum name="one" value="0"/>
+            <enum name="more" value="1"/>
+        </attr>
+        <attr name="top_max" format="dimension"/>
+    </declare-styleable>
+
+    <!--可回弹RecyclerView的自定义属性-->
+    <declare-styleable name="BounceRecyclerView">
+        <attr name="oritation">
+            <enum name="vertical" value="0"/>
+            <enum name="horizontal" value="1"/>
+        </attr>
+    </declare-styleable>
+
+    <declare-styleable name="StrokeTextView">
+        <attr name="custom_stroke_width" format="integer"/>
+        <attr name="custom_stroke_color" format="color"/>
+    </declare-styleable>
 
 </resources>
