--- a/TestSample/src/main/res/values/colors.xml
+++ b/TestSample/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_7264F9">#7264F9</color>
 
+    <color name="color_50_transparent">#80000000</color>
+
 </resources>
