--- a/TestSample/src/main/res/layout/activity_pop_menu.xml
+++ b/TestSample/src/main/res/layout/activity_pop_menu.xml
@@ -46,7 +46,7 @@
     <View
         android:id="@+id/black_bg"
         android:layout_width="100dp"
-        android:layout_height="200dp"
+        android:layout_height="50dp"
         android:text="Menu"
         android:textSize="16dp"
         android:textColor="@color/black"
@@ -63,14 +63,77 @@
         />
 
     <TextView
-        android:id="@+id/tv_pop_menu"
+        android:id="@+id/tv_pop_menu_2"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Menu 2"
+        android:textSize="16dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintWidth_percent="0.25"
+        app:layout_constraintDimensionRatio="H,1:0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/tv_pop_menu_3"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Menu 3"
+        android:textSize="16dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintWidth_percent="0.25"
+        app:layout_constraintDimensionRatio="H,1:0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/tv_pop_menu_4"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Menu 4"
+        android:textSize="16dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintWidth_percent="0.25"
+        app:layout_constraintDimensionRatio="H,1:0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/tv_pop_menu_1"
         android:layout_width="90dp"
         android:layout_height="50dp"
         android:text="Menu"
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
