--- a/TestSample/src/main/res/layout/item_fling_behavior.xml
+++ b/TestSample/src/main/res/layout/item_fling_behavior.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-
-    <com.translation.sample.widget.CollapsedTextView
+    <TextView
         android:id="@+id/tv_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:collapsedLines="3"
+        android:layout_height="50dp"
+        android:textColor="@color/black"
+        android:textSize="16dp"
         />
-
 
 </LinearLayout>
