--- a/TestSample/src/main/res/layout/activity_pop_menu.xml
+++ b/TestSample/src/main/res/layout/activity_pop_menu.xml
@@ -70,7 +70,7 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -91,7 +91,7 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -112,7 +112,7 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
