--- a/TestSample/src/main/res/layout/activity_pop_menu.xml
+++ b/TestSample/src/main/res/layout/activity_pop_menu.xml
@@ -2,64 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_7264F9"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-<!--    <androidx.constraintlayout.widget.Guideline-->
-<!--        android:id="@+id/guide_line"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintGuide_percent="0.5"-->
-<!--        />-->
-
-<!--    <View-->
-<!--        android:id="@+id/black_bg"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:text="Menu"-->
-<!--        android:textSize="16dp"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:gravity="center"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        app:layout_constraintWidth_percent="0.27"-->
-<!--        app:layout_constraintDimensionRatio="H,1:0.5"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/guide_line"-->
-<!--        />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/tv_pop_menu"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:text="Menu"-->
-<!--        android:textSize="16dp"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:gravity="center"-->
-<!--        app:layout_constraintWidth_percent="0.25"-->
-<!--        app:layout_constraintDimensionRatio="H,1:0.5"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/guide_line"-->
-<!--        />-->
 
     <View
         android:id="@+id/black_bg"
-        android:layout_width="100dp"
+        android:layout_width="90dp"
         android:layout_height="50dp"
         android:text="Menu"
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        app:layout_constraintWidth_percent="0.27"
-        app:layout_constraintDimensionRatio="H,1:0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -70,17 +26,11 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        app:layout_constraintWidth_percent="0.25"
-        app:layout_constraintDimensionRatio="H,1:0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -91,17 +41,11 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        app:layout_constraintWidth_percent="0.25"
-        app:layout_constraintDimensionRatio="H,1:0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -112,17 +56,11 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        app:layout_constraintWidth_percent="0.25"
-        app:layout_constraintDimensionRatio="H,1:0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -138,12 +76,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        app:layout_constraintWidth_percent="0.25"
-        app:layout_constraintDimensionRatio="H,1:0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+
         />
 
 </RelativeLayout>
