--- a/TestSample/src/main/res/layout/activity_popup_window.xml
+++ b/TestSample/src/main/res/layout/activity_popup_window.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_7264F9"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/color_7264F9">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_tab_layout"
         android:layout_width="0dp"
         android:layout_height="62dp"
-        android:orientation="vertical"
         android:background="@color/white"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintRight_toRightOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:id="@+id/menu_bg"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/menu_gray_bg"
@@ -34,68 +31,113 @@
         android:layout_height="wrap_content"
         android:background="@color/color_50_transparent"
         android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_menu_home"
+    <FrameLayout
+        android:id="@+id/menu_home_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/selector_menu_home"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
-        app:layout_constraintTop_toTopOf="@id/bottom_tab_layout"
-        />
+        app:layout_constraintTop_toTopOf="@id/bottom_tab_layout">
 
-    <ImageView
-        android:id="@+id/iv_menu_social"
+        <ImageView
+            android:id="@+id/iv_menu_home_pressed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_home_menu_pressed"
+            />
+
+        <ImageView
+            android:id="@+id/iv_menu_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_home_menu_normal"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/bottom_tab_layout"
+            />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/menu_social_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/selector_menu_social"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
-        app:layout_constraintTop_toTopOf="@id/bottom_tab_layout"
-        />
+        app:layout_constraintTop_toTopOf="@id/bottom_tab_layout">
 
+
+        <ImageView
+            android:id="@+id/iv_menu_social_pressed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_social_menu_pressed"
+            />
+
+        <ImageView
+            android:id="@+id/iv_menu_social"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_social_menu_normal"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/bottom_tab_layout"
+            />
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/discover_layout"
+        android:id="@+id/menu_discover_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
-        app:layout_constraintTop_toTopOf="@id/bottom_tab_layout"
-        >
+        app:layout_constraintTop_toTopOf="@id/bottom_tab_layout">
+
+        <ImageView
+            android:id="@+id/iv_menu_discover_pressed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_discover_menu_pressed"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
         <ImageView
             android:id="@+id/iv_menu_discover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/selector_menu_discover"
+            android:src="@drawable/ic_discover_menu_normal"
             android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_tab_point_tip"
             android:layout_width="6dp"
             android:layout_height="6dp"
             android:layout_marginTop="3dp"
-            app:layout_constraintCircle="@id/iv_menu_discover"
-            app:layout_constraintCircleRadius="20dp"
-            app:layout_constraintCircleAngle="45"
             android:visibility="invisible"
-            />
+            app:layout_constraintCircle="@id/iv_menu_discover"
+            app:layout_constraintCircleAngle="45"
+            app:layout_constraintCircleRadius="20dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
@@ -104,11 +146,10 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_menu_point_normal"
         android:visibility="visible"
-        app:layout_constraintVertical_bias="0.7"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_tab_layout"
         app:layout_constraintTop_toTopOf="@id/bottom_tab_layout"
-        />
+        app:layout_constraintVertical_bias="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
